Fixed stats on mobile devices

--- a/public/css/phone.less
+++ b/public/css/phone.less
@@ -423,8 +423,8 @@ h2{
 
 /* -----  Style for Stats ----- */
 .chart{
-  height: 700px;
-  margin: 15px 0 30px 0;
+  width: 300px; 
+  height: 500px;
 }
 .stats{
   .tab-content{
