--- a/public/css/style.less
+++ b/public/css/style.less
@@ -280,8 +280,8 @@ body{
 
 /* -----  Style for Stats ----- */
 .chart{
-  height: 700px;
-  margin: 15px 0 30px 0;
+width: 100%; 
+height: 500px;
 }
 .stats{
   .tab-content{
